Bug 194576 - generateUnlinkedCodeBlockForFunctions shouldn't need to create a FunctionExecutable just to get its source code
Summary: generateUnlinkedCodeBlockForFunctions shouldn't need to create a FunctionExec...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on: 194575
Blocks:
  Show dependency treegraph
 
Reported: 2019-02-12 17:53 PST by Saam Barati
Modified: 2019-02-14 10:13 PST (History)
14 users (show)

See Also:


Attachments
Patch (5.84 KB, patch)
2019-02-13 08:22 PST, Tadeu Zagallo
no flags Details | Formatted Diff | Diff
Patch for landing (5.85 KB, patch)
2019-02-14 09:32 PST, Tadeu Zagallo
no flags Details | Formatted Diff | Diff
Patch for landing (5.85 KB, patch)
2019-02-14 09:35 PST, Tadeu Zagallo
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Saam Barati 2019-02-12 17:53:29 PST
...
Comment 1 Yusuke Suzuki 2019-02-12 20:11:36 PST
Nice
Comment 2 Tadeu Zagallo 2019-02-13 08:22:42 PST
Created attachment 361919 [details]
Patch
Comment 3 Saam Barati 2019-02-13 12:19:08 PST
Comment on attachment 361919 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=361919&action=review

r=me

> Source/JavaScriptCore/bytecode/UnlinkedFunctionExecutable.h:117
> +    SourceCode linkedSourceCode(const SourceCode&);

nit: I think this function can be marked const?
Comment 4 Tadeu Zagallo 2019-02-14 09:32:45 PST
Created attachment 362027 [details]
Patch for landing
Comment 5 WebKit Commit Bot 2019-02-14 09:33:44 PST
Comment on attachment 362027 [details]
Patch for landing

Rejecting attachment 362027 [details] from commit-queue.

Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 362027, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit

ChangeLog entry in Source/JavaScriptCore/ChangeLog contains OOPS!.

Full output: https://webkit-queues.webkit.org/results/11147914
Comment 6 Tadeu Zagallo 2019-02-14 09:35:21 PST
Created attachment 362029 [details]
Patch for landing
Comment 7 WebKit Commit Bot 2019-02-14 10:12:33 PST
Comment on attachment 362029 [details]
Patch for landing

Clearing flags on attachment: 362029

Committed r241552: <https://trac.webkit.org/changeset/241552>
Comment 8 WebKit Commit Bot 2019-02-14 10:12:35 PST
All reviewed patches have been landed.  Closing bug.
Comment 9 Radar WebKit Bug Importer 2019-02-14 10:13:34 PST
<rdar://problem/48078104>