generateUnlinkedCodeBlockForFunctions shouldn't need to create a FunctionExecutable just to get its source code https://bugs.webkit.org/show_bug.cgi?id=194576

Reviewed by Saam Barati.

Extract a new function, `linkedSourceCode` from UnlinkedFunctionExecutable::link
and use it in `generateUnlinkedCodeBlockForFunctions` instead.

* bytecode/UnlinkedFunctionExecutable.cpp:
(JSC::UnlinkedFunctionExecutable::linkedSourceCode const):
(JSC::UnlinkedFunctionExecutable::link):
* bytecode/UnlinkedFunctionExecutable.h:
* runtime/CodeCache.cpp:
(JSC::generateUnlinkedCodeBlockForFunctions):


Canonical link: https://commits.webkit.org/209056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241552 268f45cc-cd09-0410-ab3c-d52691b4dbfc